--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,2 +1,10 @@
-<h1>投稿フォーム</h1>
-<p>Find me in app/views/books/new.html.erb</p>
+<h1>画像投稿フォーム</h1>
+  <%= form_with model: @book do |f| %>
+    <h4>画像</h4>
+      <%= f.file_field :image, accept: "image/*" %>
+    <h4>タイトル</h4>
+      <%= f.text_field :title %>
+    <h4>感想</h4>
+      <%= f.text_area :body %>
+    <%= f.submit '投稿' %>
+  <% end %>
