--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,25 +12,47 @@
 
   <body>
     <header>
-      <% if user_signed_in? %>
-         <li>
-          <%= link_to "投稿フォーム", new_book_path %>
-         </li>
-      　 <li>
-          <%= link_to "マイページ", user_path(current_user.id) %>
-        </li>
-        <li>
-          <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-        </li>
-      <% else %>
-        <li>
-          <%= link_to "新規登録", new_user_registration_path %>
-        </li>
-        <li>
-          <%= link_to "ログイン", new_user_session_path %>
-        </li>
-      <% end %>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="/">Bookers</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ml-auto">
+            <% if user_signed_in? %>
+              <a class="nav-item nav-link text-light" href="/"><i class="fas fa-home"></i>
+              Home</a>
+              <a class="nav-item nav-link text-light" href="/users"><i class="fas fa-users"></i>
+              Users</a>
+              <a class="nav-item nav-link text-light" href="/books"><i class="fas fa-book-open"></i>
+              Books</a>
+              <a class="nav-item nav-link text-light" href="#"><i class="fas fa-sign-out-alt"></i>
+              Log out</a>
+            <% else %>
+              <a class="nav-item nav-link text-light" href="/"><i class="fas fa-home"></i>
+              Home</a>
+              <a class="nav-item nav-link text-light" href="/homes/about"><i class="fas fa-link"></i>
+              About</a>
+              <a class="nav-item nav-link text-light" href="/users/sign_up"><i class="fas fa-user-plus"></i>
+              Sign up</a>
+              <a class="nav-item nav-link text-light" href="/users/sign_in"><i class="fas fa-sign-in-alt"></i>
+              Log in</a>
+            <% end %>
+          </div>
+        </div>
+      </nav>
     </header>
+    <main>
     <%= yield %>
+    </main>
+    <footer>
+      <div class="container mt-5">
+        <div class="row">
+          <div class="mx-auto">
+            <p>CopyRight Infratop.inc</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
