--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -12,10 +12,10 @@
       <p> about various books!</p>
       <div class="btn-wrapper col-10 mx-auto">
         <div class="row">
-          <button type="button" class="btn btn-info btn-sm btn-block mb-3" href="users/sign_in">Log in</button>
+            <%= link_to 'Log in',new_user_session_path, class: 'btn btn-info btn-sm btn-block mb-3' %>
         </div>
-         <div class="row">
-          <button type="button" class="btn btn-success btn-sm btn-block" href="users/sign_up">Sign up</button>
+        <div class="row">
+          <%= link_to 'Sign up',new_user_registration_path, class: 'btn btn-success btn-sm btn-block' %>
         </div>
       </div>
     </div>
