--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,30 +13,49 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">Bookers</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="container">
+        <a class="navbar-brand" href="/">
+          <span>Bookers</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ml-auto">
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
-              <a class="nav-item nav-link text-light" href="/"><i class="fas fa-home"></i>
-              Home</a>
-              <a class="nav-item nav-link text-light" href="/users"><i class="fas fa-users"></i>
-              Users</a>
-              <a class="nav-item nav-link text-light" href="/books"><i class="fas fa-book-open"></i>
-              Books</a>
-              <a class="nav-item nav-link text-light" href="#"><i class="fas fa-sign-out-alt"></i>
-              Log out</a>
+              <li class="nav-item">
+                <%= link_to root_path, class: 'nav-link text-light' do %>
+                <i class="fas fa-home"></i> Home<% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to users_path, class: 'nav-link text-light' do %>
+                <i class="fas fa-users"></i> Users<% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to books_path, class: 'nav-link text-light' do %>
+                <i class="fas fa-book-open"></i> Books<% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-light' do %>
+                <i class="fas fa-sign-out-alt"></i> Log out<% end %>
+              </li>
             <% else %>
-              <a class="nav-item nav-link text-light" href="/"><i class="fas fa-home"></i>
-              Home</a>
-              <a class="nav-item nav-link text-light" href="/homes/about"><i class="fas fa-link"></i>
-              About</a>
-              <a class="nav-item nav-link text-light" href="/users/sign_up"><i class="fas fa-user-plus"></i>
-              Sign up</a>
-              <a class="nav-item nav-link text-light" href="/users/sign_in"><i class="fas fa-sign-in-alt"></i>
-              Log in</a>
+              <li class="nav-item">
+                <%= link_to root_path, class: 'nav-link text-light' do %>
+                <i class="fas fa-home"></i> Home<% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to about_path, class: 'nav-link text-light' do %>
+                <i class="fas fa-link"></i> About<% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to new_user_registration_path, class: 'nav-link text-light' do %>
+                <i class="fas fa-user-plus"></i> Sign up<% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to new_user_session_path, class: 'nav-link text-light' do %>
+                <i class="fas fa-sign-in-alt"></i> Log in<% end %>
+              </li>
             <% end %>
           </div>
         </div>
