--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,18 @@
-<h1>Users</h1>
+<p id="notice"></p>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <%=render 'list', user: @user, book: @book %>
+    <div class="col-md-8 offset-md-1">
+    <h2>Users</h2>
+    <table class="table">
+    <thead>
+      <tr>
+        <th>image</th>
+        <th>name</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+    </table>
+    </div>
+  </div>
+</div>
