--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,41 +1,7 @@
 <p id="notice"></p>
 <div class="container px-5 px-sm-0">
   <div class="row">
-    <div class="col-md-3">
-      <h2>User info</h2>
-      <%= image_tag @user.get_profile_image(100,100) %>
-      <table class="table">
-        <tbody>
-          <tr></tr>
-          <tr>
-            <th>name</th>
-            <th><%= @user.name %></th>
-          </tr>
-          <tr>
-            <th>introduciton</th>
-            <th></th>
-          </tr>
-        </tbody>
-      </table>
-      <div class="row">
-        <%= link_to edit_user_path, class: 'btn btn-outline-secondary btn-block' do %>
-        <i class="fas fa-user-cog"></i><% end %>
-      </div>
-      <h2 class="mt-3">New book</h2>
-      <%= form_with model: @book do |f| %>
-      <div class="form-group">
-        <%= f.label :Title %><br>
-        <%= f.text_field :title, class: 'form-control' %>
-      </div>
-      <div class="form-group">
-        <%= f.label :Opinion %><br>
-        <%= f.text_area :body, class: 'form-control' %>
-      </div>
-      <div class="form-group">
-        <%= f.submit 'Create Book', class: 'btn btn-success' %>
-      </div>
-      <% end %>
-    </div>
+    <%=render 'list', user: @user, book: @book %>
     <div class="col-md-8 offset-md-1">
     <h2>Books</h2>
     <table class="table table-hover table-inverse">
