--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,25 +1,22 @@
-<p id-"notice"></p>
+<p id="notice"></p>
 <div class="container">
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-      <h2>User info</h2>
-      <%= form_with model: @user do |f| %>
+      <h1>Editing Book</h1>
+      <%= form_with model: @book do |f| %>
       <div class="form-group">
-        <%= f.label :Name %><br>
-        <%= f.text_field :name, class: 'form-control' %>
+        <%= f.label :Title %><br>
+        <%= f.text_field :title, class: 'form-control' %>
       </div>
       <div class="form-group">
-        <%= f.label :Image %><br>
-        <%= f.file_field :profile_image, accept: "image/*", class: 'form-control-file' %>
+        <%= f.label :Opinion %><br>
+        <%= f.text_area :body, class: 'form-control' %>
       </div>
       <div class="form-group">
-        <%= f.label :Introduction %><br>
-        <%= f.text_area :introduction, class: 'form-control' %>
-      </div>
-      <div class="form-group">
-        <%= f.submit class: 'btn btn-secondary' %>
+        <%= f.submit class: 'btn btn-success' %>
       </div>
       <% end %>
+      <%= link_to 'Show', book_path(@book.id) %>  |  <%= link_to 'Back', books_path %>
     </div>
   </div>
 </div>
