--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"></p>
 <div class="container px-5 px-sm-0">
   <div class="row">
-    <%=render 'users/list', user: @user, book: @book %>
+    <%=render 'users/list', user: current_user, book: @book %>
     <div class="col-md-8 offset-md-1">
     <h2>Books</h2>
     <table class="table table-hover table-inverse">
@@ -15,11 +15,19 @@
     </thead>
     <tbody>
       <% @books.each do |book| %>
-      <tr>
-        <td><%= image_tag book.get_image %></td>
-        <td><%= book.title %></td>
+        <tr>
+        <td>
+          <%= link_to user_path(book.user.id) do %>
+          <%= image_tag book.user.get_profile_image(100,100) %>
+          <% end %>
+        </td>
+        <td>
+          <%= link_to book_path(book.id) do %>
+          <%= book.title %>
+          <% end %>
+        </td>
         <td><%= book.body %></td>
-      </tr>
+        </tr>
       <% end %>
     </tbody>
     </table>
