--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,11 +7,24 @@
     <table class="table">
       <tbody>
         <tr>
-          <td><%= image_tag @user.get_profile_image(100,100) %></td>
+          <td>
+            <%= link_to user_path(@user.id) do %>
+            <%= image_tag @user.get_profile_image(100,100) %><br>
+            <%= @user.name %>
+            <% end %>
+          </td>
           <td><%= @book.title %></td>
           <td><%= @book.body %></td>
-          <td><%= link_to 'Edit', edit_book_path(current_user), class: 'btn btn-sm btn-success' %></td>
-          <td><%= link_to 'Destroy', book_path(current_user), method: :delete,"data-confirm" => "本当に消しますか？", class: 'btn btn-sm btn-danger' %></td>
+          <td>
+            <% if @book.user == current_user %>
+            <%= link_to 'Edit', edit_book_path(@book.id), class: 'btn btn-sm btn-success' %>
+            <% end %>
+          </td>
+          <td>
+            <% if @book.user == current_user %>
+            <%= link_to 'Destroy', book_path(@book.id), method: :delete,"data-confirm" => "本当に消しますか？", class: 'btn btn-sm btn-danger' %>
+            <% end %>
+          </td>
         </tr>
       </tbody>
     </table>
