--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -15,21 +15,22 @@
         </tbody>
       </table>
       <div class="row">
-        <%= link_to edit_user_path(user, user.id), class: 'btn btn-outline-secondary btn-block' do %>
-        <i class="fas fa-user-cog"></i><% end %>
+        <%= link_to edit_user_path(user.id), class: 'btn btn-outline-secondary btn-block' do %>
+        <i class="fas fa-user-cog"></i>
+        <% end %>
       </div>
       <h2 class="mt-3">New book</h2>
-      <%= form_with model: book ,url: book_path(user) do |f| %>
-      <div class="form-group">
+      <%= form_with model: book, url: books_path, method: :post do |f| %>
+       <div class="form-group">
         <%= f.label :Title %><br>
         <%= f.text_field :title, class: 'form-control' %>
-      </div>
-      <div class="form-group">
+       </div>
+       <div class="form-group">
         <%= f.label :Opinion %><br>
         <%= f.text_area :body, class: 'form-control' %>
-      </div>
-      <div class="form-group">
+       </div>
+       <div class="form-group">
         <%= f.submit 'Create Book', class: 'btn btn-success' %>
-      </div>
+       </div>
       <% end %>
     </div>
