--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"></p>
 <div class="container px-5 px-sm-0">
   <div class="row">
-    <%=render 'list', user: @user, book: @book %>
+    <%=render 'list', user: current_user, book: @book %>
     <div class="col-md-8 offset-md-1">
     <h2>Users</h2>
     <table class="table">
@@ -12,6 +12,15 @@
         <th colspan="3"></th>
       </tr>
     </thead>
+    <tbody>
+      <% @users.each do |user| %>
+      <tr>
+      <td><%= image_tag user.get_profile_image(100,100) %></td>
+      <td><%= user.name %></td>
+      <td><%= link_to 'Show',user_path(user.id) %></td>
+      </tr>
+      <% end %>
+    </tbody>
     </table>
     </div>
   </div>
