--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,6 +13,19 @@
         <th colspan="3"></th>
       </tr>
     </thead>
+    <tbody>
+      <% @books.each do |book| %>
+        <tr>
+        <td><%= image_tag @user.get_profile_image(100,100) %></td>
+        <td>
+          <%= link_to book_path(book.id) do %>
+          <%= book.title %>
+          <% end %>
+        </td>
+        <td><%= book.body %></td>
+        </tr>
+      <% end %>
+    </tbody>
     </table>
     </div>
   </div>
