--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,15 @@
 <p id="notice"></p>
 <div class="container px-5 px-sm-0">
+  <div id="error_explanation">
+  <% if @book.errors.any? %>
+    <h3><%= @book.errors.count %> errors prohibited this obj from being saved:</h3>
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+  <% end %>
+  </div>
   <div class="row">
     <%=render 'users/list', user: current_user, book: @book %>
     <div class="col-md-8 offset-md-1">
