--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"></p>
 <div class="container px-5 px-sm-0">
   <div class="row">
-    <%=render 'users/list', user: @user, book: @book %>
+    <%=render 'users/list', user: @user, book: @new_book %>
     <div class="col-md-8 offset-md-1">
     <h2>Book detail</h2>
     <table class="table">
